--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -804,7 +804,7 @@ is optimised to run on a traditional host-based machine.
 
 
 
-\section{Dwarf usage and testing}
+\section{Dwarf installation and testing}
 In this section we describe how to download and install 
 the dwarf along with all its dependencies and we show 
 how to run it for a simple test case.
