Use VERSION file and fix documentation generation

--- a/doc/documentation.tex
+++ b/doc/documentation.tex
@@ -162,7 +162,7 @@ openany,     % A chapter may start on either a recto or verso page.
 \ifdefined\HCode
 \newcommand{\version}{0.1.0\unskip}
 \else
-\newcommand{\version}{\input{../VERSION.tex}\unskip}
+\newcommand{\version}{\input{version.tex}\unskip}
 \fi
 \addto\captionsenglish{\renewcommand{\chaptername}{Chapter}}
 
